# P4-Miniproject

./: PLC.project  README.md
plc_ws/: plc_run
plc_ws/src/plc_control/: package.xml  setup.py
plc_ws/src/plc_control/launch/: plc_launch.xml
plc_ws/src/plc_control/plc_control/: control_node_script.py  display_node_script.py  plc_node_script.py
plc_ws/src/plc_control/plc_control/data_files/: carrierData.csv  carrierDataC.csv  carrierDataX.xlsx  preTimeList.csv
plc_ws/src/plc_interface/: CMakeLists.txt  package.xml
plc_ws/src/plc_interface/msg/: Carrier.msg  EstTime.msg  NodeBool.msg  Time.msg
